<resources>
    <string name="app_name">MySchool</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">Sign in</string>
    <string name="to_continue">to continue</string>
    <string name="create_account">Create Account</string>
    <string name="i_m_a">I am a</string>
    <string name="teacher">Teacher</string>
    <string name="student">Student</string>
    <string name="next">Next</string>
    <string name="or">or\u0020</string>
    <string name="or1">or</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="view_roles_and_access_of_user">View Roles and Access of User</string>
    <string name="teacher_roles">This user has the right to create classes,upload the assignments, tests and can
        also share the link to join video lectures. He can also review the assignment and
        tests and give the marks on the platform itself. This user will be kind of an administrator.</string>
    <string name="student_roles">This user will have the right to perform the assignments, attend the tests and
        join the lectures. He will also be able to see the timetable and test results as mentioned above.</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="back">Back</string>
    <string name="prev">Prev</string>
    <string name="sign_up_with_google">Sign up with Google</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="no_account">No account?\u0020</string>
    <string name="create_one">Create One!</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="bad_login_credential">Invalid Login Credential..</string>
    <string name="decfault_web_client_id">136657161584-q3hob2kt8j3sbhn3gnp8vqt5be33o6gi.apps.googleusercontent.com</string>
    <string name="storing_user_info">Storing user info…</string>
    <string name="_8_maths">8_Maths</string>
    <string name="my_school">My School</string>
    <string name="you_have_not_enrolled_in_any_subjects">You have not enrolled in any subjects!</string>
    <string name="signing_in">Signing in…</string>
    <string name="login__info_msg">On Clicking -> Sign in with Google, You will be enrolled as a student. To enroll as
        enter as a teacher, please go to sign up screen via -> Create One</string>
    <string name="available_subjects">Available Subjects</string>
    <string name="assignment">Assignment</string>
    <string name="quiz_test">Quiz / Test</string>
    <string name="calendar">Calendar</string>
    <string name="logout">Logout</string>
    <string name="enrolled_subjects">Enrolled Subjects</string>
    <string name="r">R</string>
    <string name="devr52222_gmail_com">devr52222@gmail.com</string>
    <string name="to_do">To Do</string>
    <string name="missing">Missing</string>
    <string name="done">Done</string>
    <string name="maths_assignment_1">Maths Assignment 1</string>
    <string name="subject">Subject :</string>
    <string name="task_link">Task Link :</string>
    <string name="no_assignment_found">No Assignment found !</string>
    <string name="upcoming">Upcoming</string>
    <string name="past">Past</string>
    <string name="no_test_found">No Test Found !</string>
    <string name="due_31_08_2021_11_59">Due: 31/08/2021 11:59</string>
    <string name="_78_100">78/100</string>
    <string name="enroll">Enroll</string>
    <string name="no_available_subjects_found">No available subjects found !</string>
    <string name="create_subject">Create Subject</string>
    <string name="subject_class">Subject/Class</string>
    <string name="your_name">Your Name</string>
    <string name="class_link">Class Link (if any)</string>
    <string name="timing_if_any">Timing (if any)</string>
    <string name="create">Create</string>
    <string name="no_announcement_from_your_teacher">No announcement from your teacher !!</string>
    <string name="warning">Warning</string>
    <string name="you_will_no_longer_have_access_to_this_subject">You will no longer have access to this subject</string>
    <string name="un_enroll">Un Enroll</string>
    <string name="cancel">Cancel</string>
    <string name="learn_and_test_yourself">Learn and Test Yourself</string>
    <string name="create_calendar_event_for_student">Create Calendar Event for Student.</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="location">Location</string>
    <string name="meeting_link_if_online">Meeting Link (if online)</string>
    <string name="create_event">Create Event</string>
    <string name="calendar_note"><![CDATA[Note: Write -> Remote / Online <- in location field, if it is online.]]></string>
    <string name="calendar_warning">All fields are mandatory!!</string>
</resources>

