<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/test_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_5"
    app:cardBackgroundColor="@color/browser_actions_bg_grey"
    app:cardCornerRadius="6dp"
    app:cardElevation="3dp"
    app:cardUseCompatPadding="true"
    app:contentPaddingBottom="@dimen/padding_small"
    app:contentPaddingLeft="@dimen/padding_normal"
    app:contentPaddingRight="@dimen/padding_normal"
    app:contentPaddingTop="@dimen/padding_small">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/test_name_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="1dp"
                android:layout_marginEnd="-193dp"
                android:layout_toStartOf="@+id/test_marks_tv"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/maths_assignment_1"
                android:textSize="@dimen/text_18" />

            <TextView
                android:id="@+id/test_marks_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:fontFamily="@font/poppins"
                android:text="@string/_78_100"
                android:textSize="@dimen/text_18" />

        </RelativeLayout>

        <TextView
            android:id="@+id/test_dueDate_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:text="@string/due_31_08_2021_11_59" />

        <LinearLayout
            android:id="@+id/test_expandableLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/subject"
                android:textSize="@dimen/text_16" />

            <TextView
                android:id="@+id/test_subject_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:text="@string/_8_maths" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/task_link"
                android:textSize="@dimen/text_16" />

            <TextView
                android:id="@+id/test_testLink_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/poppins"
                android:text="@string/_8_maths"
                android:textColor="@color/link_color"
                android:textSize="@dimen/text_16" />

        </LinearLayout>


    </LinearLayout>


</androidx.cardview.widget.CardView>