<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.CalendarActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/top_bar_height_normal"
        android:background="@drawable/top_bar_bg"
        android:padding="@dimen/padding_normal">

        <ImageView
            android:id="@+id/calendar_close_iv"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/margin_10"
            android:src="@drawable/ic_close"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/calendar_toolbarTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/margin_15"
            android:layout_toEndOf="@+id/calendar_close_iv"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/my_school"
            android:textColor="@color/white"
            android:textSize="@dimen/text_24" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding_normal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:text="@string/create_calendar_event_for_student"
            android:textColor="@color/black"
            android:textSize="@dimen/text_18" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_5"
            android:hint="@string/title"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/ic_headline"
            app:startIconTint="@color/color_primary_variant">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/calendar_title_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_5"
            android:hint="@string/description"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/ic_description"
            app:startIconTint="@color/color_primary_variant">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/calendar_desc_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_5"
            android:hint="@string/location"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/ic_location_city"
            app:startIconTint="@color/color_primary_variant">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/calendar_location_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/calendar_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/margin_10"
            android:text="@string/create_event"
            android:textAllCaps="false" />

        <TextView
            android:id="@+id/calendar_warning_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_20"
            android:visibility="gone"
            android:text="@string/calendar_warning"
            android:textColor="@android:color/holo_red_light"
            android:textSize="@dimen/text_16" />

    </LinearLayout>

</LinearLayout>