<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/assignment_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_5"
    app:cardBackgroundColor="@color/browser_actions_bg_grey"
    app:cardCornerRadius="6dp"
    app:cardElevation="3dp"
    app:cardUseCompatPadding="true"
    app:contentPaddingBottom="@dimen/padding_small"
    app:contentPaddingLeft="@dimen/padding_normal"
    app:contentPaddingRight="@dimen/padding_normal"
    app:contentPaddingTop="@dimen/padding_small">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/assignment_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/maths_assignment_1"
            android:textSize="@dimen/text_18" />

        <TextView
            android:id="@+id/assignment_dueDate_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:text="Due Date: 31/08/2021 11:59" />


        <LinearLayout
            android:id="@+id/assignment_expandableLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/subject"
                android:textSize="@dimen/text_16" />

            <TextView
                android:id="@+id/assignment_subject_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:text="@string/_8_maths" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/task_link"
                android:textSize="@dimen/text_16" />

            <TextView
                android:id="@+id/assignment_task_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/poppins"
                android:text="@string/_8_maths"
                android:textColor="@color/link_color"
                android:textSize="@dimen/text_16" />

        </LinearLayout>


    </LinearLayout>


</androidx.cardview.widget.CardView>